# Advanced-Computer-Animation-Term-Project

./: .gitmodules  README.md
bullet_toy/: CMakeLists.txt  Camera.h  CollisionObject.cpp  CollisionObject.h  bulletHelper.cpp  bulletHelper.h  bvh.cpp  bvh.h  external  mesh.h  model.h  openglHelper.cpp  openglHelper.h  rigid.cpp  shader.h
bullet_toy/character/: arm.xml  character.xml  gen.xml  gen2.xml
bullet_toy/cpp/Motion/: MotionDB.cpp  MotionGraph.cpp  MotionStatus.cpp  Parser.cpp
bullet_toy/cpp/Render/: Drawable.cpp  GLfunctions.cpp  Player.cpp  ShapeInfo.cpp
bullet_toy/cpp/Skeleton/: Helper.cpp  IK.cpp  Skeleton.cpp
bullet_toy/include/Motion/: Motion.h  MotionDB.h  MotionGraph.h  MotionStatus.h  Parser.h
bullet_toy/include/Render/: Drawable.h  Player.h  Render.h  ShapeInfo.h
bullet_toy/include/Skeleton/: Helper.h  Skeleton.h
bullet_toy/modelloader/: .main.cpp.swp  fragshader.txt  fs.fs  main.cpp
bullet_toy/motion/: 002_ready_jab.bvh  005_ready_punch.bvh  012_ready_step.bvh  013_readystart.bvh  013_readystop.bvh  020_ready_roll.bvh  023_down_wakeup.bvh  16_15_walk_1.bvh  16_15_walk_3.bvh  16_17_walk_left_1.bvh  16_19_walk_right_2.bvh  16_33_walk_stop_2.bvh  16_35_run_1.bvh  16_35_run_2.bvh  16_35_run_3.bvh  16_35_run_4.bvh  16_41_run_left_1.bvh  16_57_run_stop_1.bvh  MotionGraph.cfg  forward_jump.bvh  forward_jump_after.bvh  jump_pose_static.bvh  run_start.bvh  standing.bvh  superman_pose.bvh  superman_pose_after_jump.bvh  walk.bvh  walk_start.bvh
bullet_toy/motion/past/: 013_ready.bvh  013_ready_left.bvh  013_ready_right.bvh  016_ready_stamp.bvh  022_ready_kick.bvh  023_ready_stamp.bvh  16_15_walk_2.bvh  16_15_walk_4.bvh  16_17_walk_left_2.bvh  16_19_walk_right_1.bvh  16_34_walk_stop_1.bvh  16_44_run_right_1.bvh  clip.rb
bullet_toy/motion/rotate/: A.cpp  CMakeLists.txt
cloth_toy/: main.cpp
rope_toy/: Makefile  rope  rope.cpp
vsctut/: A.out  CMakeLists.txt
vsctut/IK/: fs.fs  glad.c  main.cpp
vsctut/common/: bvh.cpp  bvh.h  camera.h  controls.cpp  controls.hpp  model.h  shader.h
vsctut/common/glad/: glad.h
vsctut/finalproject/: main.cpp
vsctut/modelloader/: main.cpp
vsctut/motion/: main.cpp
