cmake_minimum_required(VERSION 3.8)
project(sandbox2)

add_definitions(-DBT_USE_DOUBLE_PRECISION)
add_subdirectory (external)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS "-std=c++17 -g")
include_directories("${CMAKE_HOME_DIRECTORY}/include")
find_package(Bullet REQUIRED)
find_package(OpenGL REQUIRED)
find_package(Eigen3 REQUIRED)
message(STATUS "${BULLET_INCLUDE_DIR}")
message(STATUS "${BULLET_LIBRARIES}")
message(STATUS "${EIGEN3_INCLUDE_DIRS}")
include_directories("${BULLET_INCLUDE_DIR}")
include_directories("${OPENGL_INCLUDE_DIR}")
include_directories("./")
include_directories("./include")
include_directories("external/glew-1.13.0/include")
include_directories("external/tinyxml2")
include_directories("external/glm-0.9.7.1")
include_directories("external/glfw-3.1.2/include")
include_directories("external/glad")
include_directories("external/assimp-5.0.0/include")
include_directories(${EIGEN3_INCLUDE_DIRS})

set(ALL_LIBS ${OPENGL_LIBRARY} ${BULLET_LIBRARIES} assimp glfw GLEW_1130 tinyxml)
file(GLOB src "*.cpp" "cpp/*/*.cpp")
add_executable(sandbox ${src})
target_link_libraries(sandbox ${ALL_LIBS} -lGL -lGLU -lglut)
